<resources>

    <string name="ad_words">加入茶泡泡福利群289503226，获得一手福利线报，快来加入吧~~~</string>
    <string name="loading">正在加载....</string>
    <string name="app_name">茶泡泡</string>
    <string name="action_settings">Settings</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <!-- 4个标题 -->
    <string name="titile_home">首页</string>
    <string name="titile_login">登陆</string>
    <!-- 首页文章列表 -->
    <string name="recommend_article">推荐</string>
    <string name="like_article">喜欢</string>
    <string name="focustogether">大家正在关注</string>
    <string name="focus">关注</string>
    <string name="canclefocus">取消关注</string>
    <string name="more">更多</string>
    <!-- 用户登录注册相关 提示语-->
    <string name="login_account_number">手机号/邮箱/用户名</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="login_others">使用其他账号登录</string>
    <string name="login_qq">QQ账号登录</string>
    <string name="login_weibo">新浪微博登录</string>
    <string name="nextstep">下一步</string>
    <string name="fast_signup">快速注册</string>
    <string name="phone_num">请输入手机号</string>
    <string name="verificationcode">请输入验证码</string>
    <string name="send_verificationcode">发送验证码</string>
    <string name="nickname">请输入昵称</string>
    <string name="loginpassword">请输入登录密码</string>
    <string name="surepassword">请再次输入密码</string>

    <string name="userinfo_pinglun">我的评论</string>
    <string name="userinfo_like">我的喜欢</string>
    <string name="userinfo_xinyuandan">我的心愿单</string>
    <string name="userinfo_order">我的订单</string>
    <string name="userinfo_jifen">我的积分</string>
    <string name="userinfo_youhuiquan">我的优惠券</string>
    <string name="userinfo_location">收货地址</string>
    <string name="userinfo_setting">设置</string>
    <string name="userinfo_exit">退出登录</string>

    <string name="login_tips">未登录,请先登录。</string>
    <!-- Dialog strings -->
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Oops</string>
    <string name="dialog_rate_app_title">Rate</string>
    <string name="dialog_rate_app_text">Enjoying this app? Why not rate it!</string>
    <string name="dialog_neutral_button_text">Later</string>
    <string name="dialog_negative_button_text">No, thanks</string>
    <string name="dialog_positive_button_text">Rate</string>


    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
</resources>
